# rendera

./: .gitignore  README.md  package-lock.json  package.json
apps/editor/: editor.html  package.json  tailwind.config.js  vite.config.ts
apps/editor/src/: App.tsx  editor.tsx  index.css
apps/editor/src/components/: CropDialog.tsx  EditableProjectName.tsx  EditorHeader.tsx  ItemConfigurationPanel.tsx  LeftSidebar.tsx  MediaItemConfigurationPanel.tsx  NodePalette.tsx  PlaybackControls.tsx  PreviewPanel.tsx  RightSidebar.tsx  RteTimeline.tsx  SettingsDialog.tsx  TimelinePanel.tsx  TransformTab.tsx  TransitionsTab.tsx  VideoConfigurationPanel.tsx  index.ts
apps/editor/src/hooks/: useClipboardActions.ts  useInitialProjectId.ts  useMenuActions.ts  useTimelineDuration.ts
apps/editor/src/lib/: i18n.ts  settingsApi.ts  transformApi.ts  transitions.ts
apps/projects/: package.json  projects.html  tailwind.config.js  vite.config.ts
apps/projects/src/: App.tsx  constants.ts  index.css  types.ts
apps/recorder/: package.json  recorder.html  tailwind.config.js  vite.config.ts
apps/recorder/src/: App.tsx  index.css  recorder.tsx
main/: package.json
main/src/: index.ts  preload.ts
resources/: .gitkeep
scripts/: get-venv-python.js  run-server.js  setup-server-venv.js
server/: package.json  pyproject.toml  requirements.txt
server/app/: __init__.py  db.py  main.py  models_config.yaml
server/app/routers/: projects.py  settings.py  transforms.py
shared/: electron.d.ts  getApiUrl.ts  package.json
shared/types/: index.ts  nodeTypes.ts  projectSchema.ts
(+33 files in other folders)
