[project]
name = "rendera-server"
version = "0.1.0"
description = "Rendera FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = ["ruff", "black"]

[tool.ruff]
line-length = 100
target-version = "py311"
